openapi for FDC data part 1
